# axlighthouse-local

./: .gitignore  README.md  SECURITY_REVIEW.md  pyproject.toml
fixtures/: targets.json
fixtures/probes/: access.md  context.md  orchestration.md  tools.md
src/axlighthouse_local/: __init__.py  audit.py  cli.py  dashboard.py  fixtures.py  models.py  probes.py  runner.py
tests/: test_workflow.py
